# cmake-sharedlib-boilerplate

./: Makefile
lib/: CMakeLists.txt
lib/core/: Module.hpp
lib/core/Module/: Foo.cpp  Foo.hpp
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
